--- a/indexProductos.html
+++ b/indexProductos.html
@@ -47,7 +47,7 @@
         <nav class="hidden md:flex space-x-8">
             <a href="Index.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
             <a href="indexProductos.php" class="text-primary font-semibold transition-colors duration-300">Todos</a>
-            <a href="indexRopa.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Ropa</a>
+            <a href="indexRopa.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Ropa</a>
             <a href="indexCalzado.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Calzado</a>
             <a href="indexAccesorios.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Accesorios</a>
             <a href="indexGym.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Gym</a>
@@ -170,3 +170,4 @@
     </script>
 </body>
 </html>
+
