Update and rename indexRopa.php to indexRopa.html

--- a/indexRopa.html
+++ b/indexRopa.html
@@ -44,9 +44,9 @@
         
         <!-- Navegación Principal (Escritorio) -->
         <nav class="hidden md:flex space-x-8">
-            <a href="Index.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
-            <a href="indexProductos.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Todos</a>
-            <a href="indexRopa.php" class="text-primary font-semibold transition-colors duration-300">Ropa</a>
+            <a href="Index.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
+            <a href="indexProductos.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Todos</a>
+            <a href="indexRopa.html" class="text-primary font-semibold transition-colors duration-300">Ropa</a>
             <a href="indexCalzado.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Calzado</a>
             <a href="indexAccesorios.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Accesorios</a>
             <a href="indexGym.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Gym</a>
@@ -163,4 +163,5 @@
         });
     </script>
 </body>
+
 </html>
