--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         
         <!-- Navegación Principal (Escritorio) -->
         <nav class="hidden md:flex space-x-8">
-            <a href="Index.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
-            <a href="indexProductos.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Todos</a>
-            <a href="indexRopa.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Ropa</a>
-            <a href="indexCalzado.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Calzado</a>
-            <a href="indexAccesorios.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Accesorios</a>
-            <a href="indexGym.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Gym</a>
-            <a href="indexSuplementos.php" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Suplementos</a>
+            <a href="Index.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
+            <a href="indexProductos.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Todos</a>
+            <a href="indexRopa.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Ropa</a>
+            <a href="indexCalzado.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Calzado</a>
+            <a href="indexAccesorios.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Accesorios</a>
+            <a href="indexGym.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Gym</a>
+            <a href="indexSuplementos.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Suplementos</a>
         </nav>
 
         <!-- Iconos de Usuario y Carrito -->
@@ -377,5 +377,6 @@
 
 </body>
 </html>
+
 
 
