--- a/indexRopa.html
+++ b/indexRopa.html
@@ -44,7 +44,7 @@
         
         <!-- Navegación Principal (Escritorio) -->
         <nav class="hidden md:flex space-x-8">
-            <a href="Index.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
+            <a href="index.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
             <a href="indexProductos.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Todos</a>
             <a href="indexRopa.html" class="text-primary font-semibold transition-colors duration-300">Ropa</a>
             <a href="indexCalzado.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Calzado</a>
@@ -165,5 +165,6 @@
 </body>
 
 </html>
+
 
 
