--- a/indexSuplementos.html
+++ b/indexSuplementos.html
@@ -45,7 +45,7 @@
 
         <!-- Navegación Principal (Escritorio) -->
         <nav class="hidden md:flex space-x-8">
-            <a href="Index.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
+            <a href="index.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Inicio</a>
             <a href="indexProductos.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Todos</a>
             <a href="indexRopa.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Ropa</a>
             <a href="indexCalzado.html" class="text-dark hover:text-primary transition-colors duration-300 font-medium">Calzado</a>
@@ -167,3 +167,4 @@
 </body>
 
 </html>
+
